stave-macros/tests/fail/methods_duplicate_sets.stderr
error: multiple `sets` methods for field `name`
  --> tests/fail/methods_duplicate_sets.rs:16:12
   |
16 |     #[sets(name)]
   |            ^^^^
